# Chat

ChatServer/ChatServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  CServer.cpp  CServer.h  CSession.cpp  CSession.h  ChatServer.cpp  ChatServer.vcxproj  ChatServer.vcxproj.filters  ConfigMgr.cpp  ConfigMgr.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.cpp  StatusGrpcClient.h  config.ini  const.cpp  const.h  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
ChatServer1/ChatServer/: CServer.cpp  CServer.h  CSession.h  ChatGrpcClient.h  ChatServer.vcxproj  ChatServer.vcxproj.filters  ChatServiceImpl.cpp  ConfigMgr.cpp  Const.cpp  Data.h  LogicSystem.cpp  LogicSystem.h  MsgNode.cpp  MsgNode.h  MysqlDao.cpp  MysqlDao.h  RedisMgr.h  Singleton.h  UserMgr.h  config.ini
ChatServer2/ChatServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  CSession.cpp  ChatGrpcClient.cpp  ChatServer.cpp  ChatServer.vcxproj  ChatServer.vcxproj.filters  ChatServiceImpl.cpp  ChatServiceImpl.h  ConfigMgr.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  UserMgr.cpp  config.ini  const.h  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto  start.bat
GateServer/: GateServer.sln
GateServer/GateServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GateServer.cpp  GateServer.vcxproj  GateServer.vcxproj.filters  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  Singleton.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
StatusServer/StatusServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ConfigMgr.cpp  ConfigMgr.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  Singleton.h  StatusServer.cpp  StatusServer.vcxproj  StatusServer.vcxproj.filters  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  const.h  message.grpc.pb.cc  message.pb.cc  message.pb.h  message.proto
VarifyServer/: config.js  config.json  const.js  email.js  message.proto  package-lock.json  package.json  proto.js  redis.js  server.js
chat/: CMakeLists.txt  adduseritem.cpp  adduseritem.h  adduseritem.ui  app.rc  applyfriend.cpp  applyfriend.h  applyfriend.ui  applyfrienddialog.cpp  applyfrienddialog.h  applyfrienddialog.ui  applyfrienditem.cpp  applyfrienditem.h  applyfrienditem.ui  applyfriendlist.cpp  applyfriendlist.h  applyfriendpage.cpp  applyfriendpage.h  applyfriendpage.ui  authfrienddialog.cpp  authfrienddialog.h  authfrienddialog.ui  bubbleframe.cpp  bubbleframe.h  chatbubble.cpp  chatbubble.h  chatbubble.ui  chatdetaillist.cpp  chatdetaillist.h  chatdetailwidget.cpp  chatdetailwidget.h  chatdetailwidget.ui  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatitembase.h  chatpage.cpp  chatpage.h  chatpage.ui  (+84 more)
chat/style/: stylesheet.qss
